Setup autoconnect and updated icons

--- a/MacroTest/Properties/Settings.settings
+++ b/MacroTest/Properties/Settings.settings
@@ -92,5 +92,11 @@
     <Setting Name="keyFHotKey" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="COMPort" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="AutoConnect" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
